--- a/content/zh/_index.html
+++ b/content/zh/_index.html
@@ -12,7 +12,7 @@ linkTitle = "ByteIR"
 
 {{% /blocks/lead %}}
 
-{{< blocks/feature-overview color="white" info="feature">}}
+{{< blocks/feature-overview color="dark" info="feature">}}
 
 {{< /blocks/feature-overview >}}
 
