--- a/content/en/about/_index.html
+++ b/content/en/about/_index.html
@@ -10,11 +10,13 @@ menu:
 
 {{< blocks/about title="About" image_anchor="bottom" height="min" >}}
 
-<p class="lead" style="font-size: 30px; margin-bottom: 60px;">Simple description.
+<p class="lead" style="font-size: 30px; margin-bottom: 60px;">End-to-end model compilation solution.
 </p>
 
 <p class="home-description" style="min-height: 200px;">
-  Detail description Detail description Detail description Detail description Detail description Detail description Detail description
+  ByteIR provides an end-to-end model compilation solution, including frontends, compiler, and runtime.
+  Although all ByteIR components (frontends/compiler/runtime) are together to provide an end-to-end solution and all under the same umbrella, 
+  each component is built in a modular way and can perform independently.
 </p>
 
 {{< /blocks/about >}}
