--- a/content/en/about/_index.html
+++ b/content/en/about/_index.html
@@ -10,7 +10,7 @@ menu:
 
 {{< blocks/about title="About" image_anchor="bottom" height="min" >}}
 
-<p class="lead" style="font-size: 30px; margin-bottom: 60px;">End-to-end model compilation solution.
+<p class="lead" style="font-size: 30px; margin-bottom: 60px;">End-to-end Model Compilation Solution.
 </p>
 
 <p class="home-description" style="min-height: 200px;">
