add chinese blog

--- a/content/zh/about/_index.html
+++ b/content/zh/about/_index.html
@@ -8,11 +8,11 @@ menu:
 
 {{< blocks/about title="关于" image_anchor="bottom" height="min" >}}
 
-<p class="lead" style="font-size: 30px; margin-bottom: 60px;">简短描述
+<p class="lead" style="font-size: 30px; margin-bottom: 60px;">字节跳动端到端模型编译解决方案
 </p>
 
 <p class="home-description" style="min-height: 200px;">
-  详细描述详细描述详细描述详细描述详细描述详细描述详细描述详细描述详细描述详细描述详细描述详细描述详细描述详细描述详细描述详细描述
+  ByteIR提供了一个端到端的模型编译解决方案，包括前端、编译器和运行时。尽管所有ByteIR组件（前端/编译器/运行时）都在一起提供端到端的解决方案并且都在同一个项目中，但是每个组件都是以模块化的方式构建的，并且可以独立执行。
 </p>
 
 {{< /blocks/about >}}
